# resvg

./: .travis.yml  BUILD.adoc  Cargo.toml
bindings/resvg-skia/: Cargo.toml
bindings/resvg-skia-safe/: Cargo.toml
bindings/resvg-skia-safe/src/: lib.rs
bindings/resvg-skia/src/: lib.rs
examples/: minimal.rs
src/: image.rs  layers.rs  lib.rs
src/backend_skia/: mod.rs
src/backend_skia_bindings/: image.rs
testing-tools/: run-tests.py
tools/rendersvg/src/: args.rs  main.rs
usvg/: Cargo.toml
