[package]
name = "resvg-skia-safe"
version = "0.9.0"
authors = ["JaFenix <jspicer@phoenixcontact.com>", "Reizner Evgeniy <razrfalcon@gmail.com>"]
keywords = ["skia", "ffi"]
license = "MIT"
edition = "2018"
description = "Bindings to Skia used by resvg."
repository = "https://github.com/RazrFalcon/resvg"
workspace = "../.."

[dependencies]
skia-bindings = { version = "0.29.3" }
skia-safe = { version = "0.29.3" }
