[package]
name = "resvg-skia"
version = "0.9.1"
edition = "2018"
description = "A wrapper for skia-safe crate used by resvg."
repository = "https://github.com/velyan/resvg"
workspace = "../.."

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[dependencies]
skia-bindings = { git = "https://github.com/StewartCanva/rust-skia", rev = "5ef4c4a07ed6b76782a065ba6d06cfa1902475c3" }
skia-safe = { git = "https://github.com/StewartCanva/rust-skia", rev = "5ef4c4a07ed6b76782a065ba6d06cfa1902475c3" }
# skia-safe = "0.37.0"
# skia-bindings = "0.37.0"
png = "0.16.8"
