[package]
name = "resvg-skia"
version = "0.9.1"
edition = "2018"
description = "A wrapper for skia-safe crate used by resvg."
repository = "https://github.com/velyan/resvg"
workspace = "../.."

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[dependencies]
skia-bindings = { git = "https://github.com/StewartCanva/rust-skia", rev = "caad0aac3bf48e0149bebbd816bdaa4b6888f198" }
skia-safe = { git = "https://github.com/StewartCanva/rust-skia", rev = "caad0aac3bf48e0149bebbd816bdaa4b6888f198" }
# skia-safe = "0.37.0"
# skia-bindings = "0.37.0"
png = "0.16.8"
